--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,26 @@
-version: '3.8'
-
 services:
-  db:
-    image: mysql:5.7
-    platform: linux/x86_64
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: users
-    ports:
-      - "3306:3306"
-
   web:
     build: .
     ports:
-      - "5000:5000"
+      - "8000:8000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+  db:
+    image: mysql:5.7
     environment:
-      DATABASE_URL: mysql+pymysql://root:password@db/users
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: nameService
+      MYSQL_USER: username
+      MYSQL_PASSWORD: password
+    volumes:
+      - db_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  db_data:
+    driver: local
